# platformer-project-oop

./: CMakeLists.txt
legacy/: globals.h  platformer.cpp
src/: main.cpp
src/modules/: rendering.cpp  rendering.h
src/modules/core/: core.cpp  core.h  input.cpp  input.h  transform.cpp  transform.h
src/modules/rendering/: camera.cpp  camera.h  rendering.cpp  rendering.h  sprite2d.cpp  sprite2d.h
